poke/testsuite/poke.pkl/map-diag-7.pk
/* { dg-do compile } */

deftype Foo = struct { int i; struct { any[] a; } s; };

Foo @ 0#B; /* { dg-error "" } */
